<resources>
    <string name="app_name">KitchInventory</string>
    <string name="cook">Cook</string>
    <string name="inventory">Kitchen Inventory</string>
    <string name="shopping_list">Shopping List</string>
    <string name="welcome_to_kitchinventory_please_login">Welcome to KitchInventory. Please login or create an account.</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_new_user">Create New User</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">submit</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="shopping_list_activity">SHOPPING LIST ACTIVITY</string>
    <string name="enter_item_quantity">Enter Item Quantity</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="preference_file_key">PreferenceFileNameKitchInventory</string>
    <string name="preference_userId_key">PreferenceUserIdKeyKitchInventory</string>
    <string name="your_kitchinventory">YOUR KITCHINVENTORY</string>
    <string name="add_from_shopping_list">Add from Shopping List</string>
    <string name="delete">Delete</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_item_name_here">Enter item name here</string>
    <string name="enter_the_item_you_want_to_delete">Enter the item you want to delete.</string>
    <string name="delete2">DELETE!</string>
    <string name="go_home">Go Home</string>
    <string name="add_to_my_kitchinvetory">Add to my KitchInvetory</string>
    <string name="go_to_shopping_list">Go to Shopping List</string>
    <string name="enter_item_you_want_to_transfer_from_your_shopping_list">Enter item you want to transfer from your shopping list</string>
    <string name="back">back</string>
    <string name="add_an_item">add_an_item</string>
    <string name="delete_an_item">delete_an_item</string>
    <string name="add_items">Add Items</string>
    <string name="delete_items">Delete Items</string>
    <string name="add_items_kitchen">Add items</string>
    <string name="add_from_my_shopping_list">Add from my Shopping List</string>
    <string name="enter_item_you_want_to_add_to_your_kitchinventory">Enter item you want to add to your KitchInventory</string>
    <string name="select_user">Select User</string>
    <string name="clear_user_s_shopping_list">Clear User\'s Shopping List</string>
    <string name="clear_user_s_kitchen">Clear User\'s Kitchen</string>
    <string name="delete_user">Delete User</string>
    <string name="qty">Qty</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_instructions">Recipe Instructions</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="picture_of_food">Picture of food</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="food_name">Food Name</string>
    <string name="measure">Measure</string>
    <string name="ingredient">Ingredient</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="add_to_my_kitchinventory">Add to my KitchInventory</string>
</resources>