<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserRegistrationActivity">

    <TextView
        android:id="@+id/newUserTextView"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/create_new_user"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameInputEditText"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="4dp"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUserTextView" />

    <EditText
        android:id="@+id/passwordInputEditText"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="4dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInputEditText" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="152dp"
        android:text="@string/submit"
        android:id="@+id/submitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>