<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShoppingListActivity">

    <TextView
        android:id="@+id/shoppingListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopping_list_activity"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shoppingListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:maxHeight="300dp"
        android:layout_marginTop="24sp"
        app:layout_constraintTop_toBottomOf="@id/shoppingListTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_max="250dp"
        />

    <Button
        android:id="@+id/addItemButton"
        android:layout_marginTop="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/shoppingListRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteItemButton"
        />

    <Button
        android:id="@+id/deleteItemButton"
        android:layout_marginTop="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_item"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/shoppingListRecyclerView"
        app:layout_constraintStart_toEndOf="@id/addItemButton"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/itemName"
        android:labelFor="@id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_item_name"
        android:textSize="22sp"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/addItemButton"
        app:layout_constraintEnd_toStartOf="@id/itemQuantity"
        app:layout_constraintStart_toStartOf="parent"

        />

    <EditText
        android:id="@+id/itemQuantity"
        android:labelFor="@id/itemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_item_quantity"
        android:textSize="22sp"
        android:inputType="number"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/deleteItemButton"
        app:layout_constraintStart_toEndOf="@id/itemName"
        app:layout_constraintEnd_toEndOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>