<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/btn_shoppingList"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:text="@string/shopping_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <Button
        android:id="@+id/btn_kitchen"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:text="@string/inventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_shoppingList" />

    <Button
        android:id="@+id/btn_cook"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:text="@string/cook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_kitchen" />

    <TextView
        android:id="@+id/shoppingListQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/btn_shoppingList"
        app:layout_constraintStart_toEndOf="@id/btn_shoppingList"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="2dp"
        />
    <TextView
        android:id="@+id/inventoryListQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/btn_kitchen"
        app:layout_constraintStart_toEndOf="@id/btn_kitchen"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="2dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>