<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.KitchenActivity">

    <TextView
        android:id="@+id/kitchenTitle"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:gravity="center"
        android:text="@string/your_kitchinventory"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/kitchenDisplayRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="180dp"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kitchenTitle"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/kitchenAddButton"
        android:layout_width="156dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:text="@string/add_from_shopping_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kitchenDisplayRecyclerView"
        app:layout_constraintVertical_bias="0.652" />

    <Button
        android:id="@+id/kitchenDeleteButton"
        android:layout_width="156dp"
        android:layout_height="74dp"
        android:layout_marginStart="236dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kitchenDisplayRecyclerView"
        app:layout_constraintVertical_bias="0.673" />


</androidx.constraintlayout.widget.ConstraintLayout>