<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.KitchenAdd">

    <TextView
        android:id="@+id/addDescription"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/enter_item_you_want_to_transfer_from_your_shopping_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <EditText
        android:id="@+id/userShopListInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Item name"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addDescription"
        app:layout_constraintVertical_bias="0.437" />

    <Button
        android:id="@+id/addToKitchenButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/add_to_my_kitchinvetory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userShopListInput"
        app:layout_constraintVertical_bias="0.151" />

    <Button
        android:id="@+id/goToShoppingListButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/go_to_shopping_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addToKitchenButton"
        app:layout_constraintVertical_bias="0.093" />

</androidx.constraintlayout.widget.ConstraintLayout>